MFC r273973: vt(4): Fix keyboard allocation when kbdmux(4) isn't used

The problem was that only the kbdmux keyboard index was saved in
  vd->vd_keyboard. This index is -1 when kbdmux isn't used. In this
  case, the keyboard was correctly allocated, but the returned index was
  discarded.

PR:		196512

Former-commit-id: 6d61499d22e3c5f3f5b02976d5f5df32b702cec2